--- a/Cube/Cube/Base.lproj/Main.storyboard
+++ b/Cube/Cube/Base.lproj/Main.storyboard
@@ -21,29 +21,96 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="First View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="109" y="313" width="157.5" height="41.5"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="90.5" y="362.5" width="194.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0j8-5Z-reE" userLabel="Error View">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Internet Connectivity." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RsD-6A-PG1">
+                                        <rect key="frame" x="50" y="200" width="275" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="RsD-6A-PG1" firstAttribute="leading" secondItem="0j8-5Z-reE" secondAttribute="leading" constant="50" id="GWh-NS-x3b"/>
+                                    <constraint firstItem="RsD-6A-PG1" firstAttribute="top" secondItem="0j8-5Z-reE" secondAttribute="top" constant="200" id="UEv-gi-ema"/>
+                                    <constraint firstAttribute="trailing" secondItem="RsD-6A-PG1" secondAttribute="trailing" constant="50" id="uTv-c3-dyw"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SwC-RJ-NZV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="TTl-Gz-5Jw">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        <scopeButtonTitles>
+                                            <string>Title</string>
+                                            <string>Title</string>
+                                        </scopeButtonTitles>
+                                        <connections>
+                                            <outlet property="delegate" destination="9pv-A4-QxB" id="Lf9-eG-0MY"/>
+                                        </connections>
+                                    </searchBar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="00a-WN-tj5">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="554"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieSearchCell" textLabel="wKq-zO-Gj3" style="IBUITableViewCellStyleDefault" id="9G5-zC-YdP">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9G5-zC-YdP" id="T1a-wV-Fra">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wKq-zO-Gj3">
+                                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="9pv-A4-QxB" id="AwD-Kc-FEt"/>
+                                            <outlet property="delegate" destination="9pv-A4-QxB" id="ToM-kp-5AW"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="TTl-Gz-5Jw" secondAttribute="trailing" id="C6M-xh-NtC"/>
+                                    <constraint firstItem="00a-WN-tj5" firstAttribute="leading" secondItem="SwC-RJ-NZV" secondAttribute="leading" id="EUh-7G-TcW"/>
+                                    <constraint firstAttribute="bottom" secondItem="00a-WN-tj5" secondAttribute="bottom" id="JTW-AR-APA"/>
+                                    <constraint firstItem="00a-WN-tj5" firstAttribute="top" secondItem="TTl-Gz-5Jw" secondAttribute="bottom" id="VAX-rF-9Ib"/>
+                                    <constraint firstItem="TTl-Gz-5Jw" firstAttribute="top" secondItem="SwC-RJ-NZV" secondAttribute="top" id="XlL-dg-XVc"/>
+                                    <constraint firstItem="TTl-Gz-5Jw" firstAttribute="leading" secondItem="SwC-RJ-NZV" secondAttribute="leading" id="dAj-4A-CL2"/>
+                                    <constraint firstAttribute="trailing" secondItem="00a-WN-tj5" secondAttribute="trailing" id="fqe-E3-LGh"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="SwC-RJ-NZV" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="3Sg-ge-f6w"/>
+                            <constraint firstItem="SwC-RJ-NZV" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="7J9-MB-4cH"/>
+                            <constraint firstAttribute="trailing" secondItem="SwC-RJ-NZV" secondAttribute="trailing" id="HQ3-oa-KdS"/>
+                            <constraint firstAttribute="trailing" secondItem="0j8-5Z-reE" secondAttribute="trailing" id="S1E-iz-rHM"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="0j8-5Z-reE" secondAttribute="bottom" id="eTl-dQ-Kdb"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="SwC-RJ-NZV" secondAttribute="bottom" id="fa6-Sf-YL1"/>
+                            <constraint firstItem="0j8-5Z-reE" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="qra-dx-eNK"/>
+                            <constraint firstItem="0j8-5Z-reE" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="wKs-Gm-F6M"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="errorView" destination="0j8-5Z-reE" id="yjs-vt-V9L"/>
+                        <outlet property="idleView" destination="SwC-RJ-NZV" id="wNR-Kw-y0k"/>
+                        <outlet property="moviesTableView" destination="00a-WN-tj5" id="LkY-zd-83e"/>
+                        <outlet property="searchBar" destination="TTl-Gz-5Jw" id="e57-GF-D60"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
